fix: copy over changes made directly to Hertz.purs to Hertz.purs.erb

--- a/src/Hertz.purs.erb
+++ b/src/Hertz.purs.erb
@@ -9,6 +9,17 @@ import Hertz.Internal (
   Component,
   Property,
   VirtualNode,
+  Initialize,
+  Update,
+  Render,
+  Subscriptions,
+  Subscription,
+  DidMount,
+  ShouldUpdate,
+  DidUpdate,
+  WillUnmount,
+  Self,
+  Send,
   text,
   property,
   on,
@@ -19,6 +30,7 @@ import Hertz.Internal (
   none,
   component,
   make,
+  makeKeyed,
   render,
   log
 )
